--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "author": {
     "name": "Bjarke Handsdal"
   },
+  "scripts": {
+    "postinstall": "gulp"
+  },
   "dependencies": {
     "@angular/common": "^4.3.3",
     "@angular/compiler": "^4.3.3",
