--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,18 @@
 // Place your settings in this file to overwrite default and user settings.
 {
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/.vscode": true,
+    "**/node_modules": true,
+    // "**/dist": true,
+    "**/webpack.config.app.js": true,
+    "**/webpack.config.dependencies.js": true,
+    "**/tsconfig.json": true,
+    "**/.gitignore": true
+  },
+  "editor.tabSize": 2
 }
