--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@angular/common": "^4.3.3",
     "@angular/compiler": "^4.3.3",
     "@angular/core": "^4.3.3",
+    "@angular/forms": "^4.4.4",
     "@angular/http": "^4.3.3",
     "@angular/platform-browser": "^4.3.3",
     "@angular/platform-browser-dynamic": "^4.3.3",
     "@angular/router": "^4.3.3",
+    "bootstrap-sass": "^3.3.7",
     "core-js": "^2.5.0",
+    "jquery": "^3.2.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.16"
@@ -28,6 +31,9 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-flatten": "^0.3.1",
+    "gulp-plumber": "^1.1.0",
+    "gulp-pug": "^3.3.0",
+    "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^2.6.0",
     "gulp-typescript": "^3.2.1",
