--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,        
     "sourceMap": true,
+    "removeComments": true,
     "typeRoots": [
       "node_modules/@types"
     ],
